--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   .wrapper {
       display: flex;
       justify-content: center;
-      
   }
   .App {
       margin: 5rem 0;
@@ -21,12 +20,13 @@
       offset: 10px;
       background-color: rgb(2, 8, 8);
       overflow: auto;
+      overflow-wrap: break-word;
   }
 
   
 
   .todo-input  {
-      width: 150px;
+      width: 140px;
       height: 25px;
   }
 
@@ -37,6 +37,7 @@
   } 
 
   h1 {
+    font-size: 1.5em;
     color: #fff;
     -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
     -moz-animation: neon1 1.5s ease-in-out infinite alternate;
@@ -49,6 +50,8 @@
     -moz-animation: none;
     animation: none;
   }
+
+  
 
 /* end of our extra code */
 
@@ -76,6 +79,8 @@
     border: none;
     border-radius: 30px;
     background: rgb(44, 47, 48);
+    margin-left: 1rem;
+    color: #FF1177;
   }
   form button {
     color: #FF1177;
@@ -116,12 +121,14 @@
     align-items: center;
     transition: all 1s ease;
     border-radius: 30px;
+    height: 2rem;
   }
   .filter-todo {
-    padding: 1rem;
+    /* padding: 1rem; */
   }
   .todo li {
     flex: 1;
+    height: 2rem;
   }
   
   .trash-btn,
@@ -134,13 +141,18 @@
     padding: 1rem;
     cursor: pointer;
     font-size: 1rem;
+    height: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
   }
   
   .complete-btn {
     background: rgba(3, 233, 244, 1);
   }
   .important-btn {
-    background: rgb(244, 3, 3);
+    background: rgb(240, 130, 4);
   }
   .todo-item {
     padding: 0rem 0.5rem;
@@ -162,7 +174,7 @@
   }
 
   .important {
-    color: #f70000;    
+    color: rgb(240, 130, 4);  
   }
   
   /*CUSTOM SELECTOR */
@@ -175,6 +187,7 @@
     box-shadow: none;
     border: 0 !important;
     background-image: none;
+    
   }
   
   /* Custom Select */
@@ -182,12 +195,17 @@
     margin: 1rem;
     position: relative;
     overflow: hidden;
+    /* height: 1.5rem; */
+    font-size: 1rem;
+    
   }
   select {
-    color: #ff6f47;
+    color: #FF1177;
     font-family: "Poppins", sans-serif;
     cursor: pointer;
-    width: 12rem;
+    width: 5rem;
+    height: 1.4rem;
+    background-color: rgb(44, 47, 48);
   }
   /* Arrow */
   .select::after {
@@ -195,10 +213,12 @@
     position: absolute;
     top: 0;
     right: 0;
-    padding: 1rem;
-    background: #ff6f47;
+    /* padding: 1rem; */
+    background: #FF1177;
+    color: #000000;
     cursor: pointer;
     pointer-events: none;
+    
   }
   /* Transition */
   /*
